fix: teaser-and-text - text slide not visible on mobile

--- a/src/components/image-teaser/image-teaser.scss
+++ b/src/components/image-teaser/image-teaser.scss
@@ -178,7 +178,7 @@ $it--icon_items-in-view-till-laptop: deep-get(
             align-items: flex-start;
 
             #{$root}__picture + &,
-            #{$root}--teaser-and-text & {
+            #{$root}--teaser-and-text #{$root}__slide--image-uploaded & {
                 position: absolute;
                 top: 0;
                 left: 0;
